@@ -952,7 +952,7 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|dir
+name|hbaseDir
 argument_list|,
 name|HConstants
 operator|.
@@ -990,6 +990,25 @@ index|[
 literal|3
 index|]
 decl_stmt|;
+name|Path
+name|tabledir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+name|tabledir
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -1042,6 +1061,49 @@ operator|)
 argument_list|)
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|tabledir
+argument_list|,
+name|infos
+index|[
+name|i
+index|]
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"allo "
+operator|+
+operator|new
+name|Path
+argument_list|(
+name|tabledir
+argument_list|,
+name|infos
+index|[
+name|i
+index|]
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1212,19 +1274,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|Path
-name|splitsdir
-init|=
-operator|new
-name|Path
-argument_list|(
-name|this
-operator|.
-name|dir
-argument_list|,
-literal|"splits"
-argument_list|)
-decl_stmt|;
 name|HLogSplitter
 name|logSplitter
 init|=
@@ -1245,7 +1294,7 @@ name|logSplitter
 operator|.
 name|splitLog
 argument_list|(
-name|splitsdir
+name|hbaseDir
 argument_list|,
 name|logdir
 argument_list|,
