@@ -39,6 +39,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertFalse
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|assertNull
 import|;
 end_import
@@ -130,6 +142,34 @@ operator|.
 name|atomic
 operator|.
 name|AtomicLong
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
 import|;
 end_import
 
@@ -409,6 +449,21 @@ class|class
 name|TestHLogSplit
 block|{
 specifier|private
+specifier|final
+specifier|static
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|TestHLogSplit
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|private
 name|Configuration
 name|conf
 decl_stmt|;
@@ -589,6 +644,25 @@ name|String
 name|HBASE_SKIP_ERRORS
 init|=
 literal|"hbase.hlog.split.skip.errors"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Path
+name|tabledir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|TABLE_NAME
+argument_list|)
+argument_list|)
 decl_stmt|;
 specifier|static
 enum|enum
@@ -841,6 +915,47 @@ operator|.
 name|getEncodedNameAsBytes
 argument_list|()
 decl_stmt|;
+name|Path
+name|tdir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|HConstants
+operator|.
+name|META_TABLE_NAME
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Path
+name|regiondir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|tdir
+argument_list|,
+name|HRegionInfo
+operator|.
+name|FIRST_META_REGIONINFO
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+name|regiondir
+argument_list|)
+expr_stmt|;
 name|long
 name|now
 init|=
@@ -889,11 +1004,7 @@ name|fs
 argument_list|,
 name|entry
 argument_list|,
-operator|new
-name|Path
-argument_list|(
-literal|"/"
-argument_list|)
+name|hbaseDir
 argument_list|)
 decl_stmt|;
 name|String
@@ -2897,6 +3008,29 @@ argument_list|,
 name|conf
 argument_list|)
 expr_stmt|;
+name|String
+name|region
+init|=
+literal|"break"
+decl_stmt|;
+name|Path
+name|regiondir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|tabledir
+argument_list|,
+name|region
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+name|regiondir
+argument_list|)
+expr_stmt|;
 name|InstrumentedSequenceFileLogWriter
 operator|.
 name|activateFailure
@@ -2916,7 +3050,7 @@ name|Bytes
 operator|.
 name|toBytes
 argument_list|(
-literal|"break"
+name|region
 argument_list|)
 argument_list|,
 operator|(
@@ -3188,6 +3322,107 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSplitDeletedRegion
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|regions
+operator|.
+name|removeAll
+argument_list|(
+name|regions
+argument_list|)
+expr_stmt|;
+name|String
+name|region
+init|=
+literal|"region_that_splits"
+decl_stmt|;
+name|regions
+operator|.
+name|add
+argument_list|(
+name|region
+argument_list|)
+expr_stmt|;
+name|generateHLogs
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|initialize
+argument_list|(
+name|fs
+operator|.
+name|getUri
+argument_list|()
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|Path
+name|regiondir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|tabledir
+argument_list|,
+name|region
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|regiondir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|HLogSplitter
+name|logSplitter
+init|=
+name|HLogSplitter
+operator|.
+name|createLogSplitter
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|logSplitter
+operator|.
+name|splitLog
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|hlogDir
+argument_list|,
+name|oldLogDir
+argument_list|,
+name|fs
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|regiondir
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * This thread will keep writing to the file after the split process has started    * It simulates a region server that was considered dead but woke up and wrote    * some more to he last log entry    */
 class|class
 name|ZombieLastLogWriterRegionServer
@@ -3271,13 +3506,37 @@ condition|)
 block|{
 try|try
 block|{
+name|String
+name|region
+init|=
+literal|"juliet"
+decl_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|region
+argument_list|)
+argument_list|,
+name|region
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|appendEntry
 argument_list|(
 name|lastLogWriter
 argument_list|,
 name|TABLE_NAME
 argument_list|,
-literal|"juliet"
+name|region
 operator|.
 name|getBytes
 argument_list|()
@@ -3522,6 +3781,11 @@ literal|100
 argument_list|)
 expr_stmt|;
 block|}
+name|String
+name|region
+init|=
+literal|"juliet"
+decl_stmt|;
 name|Path
 name|julietLog
 init|=
@@ -3537,6 +3801,25 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|hbaseDir
+argument_list|,
+name|region
+argument_list|)
+argument_list|,
+name|region
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|HLog
 operator|.
 name|Writer
@@ -3677,6 +3960,28 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+for|for
+control|(
+name|String
+name|region
+range|:
+name|regions
+control|)
+block|{
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|tabledir
+argument_list|,
+name|region
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|int
