@@ -888,6 +888,22 @@ argument_list|(
 name|basedir
 argument_list|)
 expr_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|basedir
+argument_list|,
+name|hri
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 specifier|final
 name|byte
 index|[]
@@ -2031,6 +2047,22 @@ decl_stmt|;
 name|deleteDir
 argument_list|(
 name|basedir
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|basedir
+argument_list|,
+name|hri
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|HLog
